Add: Swaim: The Man They Couldn’t Cancel [Jordan Peterson]

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -3437,20 +3437,6 @@
 
         * Peter Storm-Henningsen: "Philosophy, Imagination and the Lord of the Rings", TEDxEAL, 2015: https://www.youtube.com/watch?v=6s3vnRPoQ_E 
       -->
-      <!--
-        Even WatchMojo.com has a list of "Top 10 Philosophers": https://www.youtube.com/watch?v=05wgos9GRzE
-        10. David Hume (1711-1776)
-        9. Jean-Paul Sartre (1905-1980)
-        8. John Locke (1632-1704)
-        7. Jean-Jacques Rousseau (1712-1778)
-        6. Socrates (c.469-@@)
-        5. Confucius (551-479 BC)
-        4. René Descartes (1596-1650)
-        3. Friedrich Nietzsche (1844-1900)
-        2. Plato (c. 427-347 BC)
-        1. Aristotle (384-322 BC)
-        Honorable mentions: Immanuel Kant (1724-1804), Baruch Spinoza (1632-1677), Thomas Hobbes (1588-1679), Niccolò Macchiavelli ( 1469-1527), Michel Foucault (1926-1984), Thomas Aquinas (1225-1274), Karl Marx (1818-1883)
-      -->
 
       <p>Free speech:</p>
       <ul>
@@ -3505,6 +3491,16 @@
           <br />Introductory paragraph:
           <q>Cambridge University has been forced to drop rules requiring students, lecturers and visitors to “respect” opposing views after overwhelming opposition from academics.</q>
           <!--Referrer: Steven Pinker, 10.12.2020: https://twitter.com/sapinker/status/1337037126169473025 -->
+        </li>
+        <li>Swaim, Barton:
+          <a href="https://www.wsj.com/articles/the-man-they-couldnt-cancel-11619806528?mod=opinion_lead_pos5">The Man They Couldn’t Cancel</a>,
+          <i class="newspaper">Wall Street Journal</i>, 30.04.2021.
+          <br />Subtitle: <q>Mobs have targeted Jordan Peterson, but he hasn’t lost his university job and his publishers have stuck by him. What’s his secret?</q>
+          Quotes: <q>The cancelers’ strange fixations mean that apologizing to them is folly. Mr. Peterson hasn’t apologized or disavowed any previous statement.</q>
+          <br />Among other things, Peterson says that most of what intellectuals write is criticism. Petersons responds,
+          <q>The proper attitude toward young people is encouragement, (...) their ambitions, their strivings, their desire to be competent, their deep wish for a trustworthy guiding hand.
+          I think our culture is so cynical that it’s impossible, especially for the established intellectual chattering critics, to even imagine that encouragement is possible.</q>
+          <!--Referrer: Michael Shermer, 02.05.2021: https://twitter.com/michaelshermer/status/1388881461332283401 -->
         </li>
       </ul>
     </section>
