--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1905,6 +1905,15 @@
           <a href="https://web.archive.org/web/20030201224341/http://www.umr8547.ens.fr/fonds-d'Archives.html" lang="fr">Bibliothèque des Archives Husserl de Paris</a>
           (archived on Archive.org; accessed on 17.05.2021).
         </li>
+        <li><span lang="de">Husserl, Edmund:
+          <i class="booktitle">Logische Untersuchungen</i>. Mit einer Einführung und einem Sach- und Namenregister von Elisabeth Ströker. Meiner,</span> 2013. (LXXIII + 811 pages)
+          <a href="https://meiner.de/logische-untersuchungen-9430.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-1944-2</a>.
+          <!--@@17.05.2021: Sonderangebot-->
+        </li>
+        <li><span lang="de">Husserl, Edmund:
+          <i class="booktitle">Philosophie als strenge Wissenschaft</i>. Mit einer Einleitung und Anmerkungen herausgegeben von Eduard Marbach. Meiner,</span> 2009. (XLVIII + 87 pages)
+          <a href="https://meiner.de/philosophie-als-strenge-wissenschaft-9411.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-1926-8</a>.
+        </li>
       </ul>
 
       <h3 lang="fr">Gaston Bachelard (1884 – 1962)</h3>
