Add: Husserl: Die Idee der Phänomenologie

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1906,6 +1906,11 @@
           (archived on Archive.org; accessed on 17.05.2021).
         </li>
         <li><span lang="de">Husserl, Edmund:
+          <i class="booktitle">Die Idee der Phänomenologie. Fünf Vorlesungen</i>. Herausgegeben von Paul Janssen. Meiner,</span> 1986. (XLVI + 88 pages)
+          <a href="https://meiner.de/die-idee-der-phanomenologie.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-0685-5</a>.
+          <br />This volume contains five lectures from 1907.
+        </li>
+        <li><span lang="de">Husserl, Edmund:
           <i class="booktitle">Logische Untersuchungen</i>. Mit einer Einführung und einem Sach- und Namenregister von Elisabeth Ströker. Meiner,</span> 2013. (LXXIII + 811 pages)
           <a href="https://meiner.de/logische-untersuchungen-9430.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-1944-2</a>.
           <!--@@17.05.2021: Sonderangebot-->
