Add: Husserl:Die Phänomenologie und die Fundamente der Wissenschaften

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1911,6 +1911,10 @@
           <br />This volume contains five lectures from 1907.
         </li>
         <li><span lang="de">Husserl, Edmund:
+          <i class="booktitle">Die Phänomenologie und die Fundamente der Wissenschaften</i>. Herausgegeben von Karl-Heinz Lembeck. Meiner,</span> 1986. (XXXV + 114 pages)
+          <a href="https://meiner.de/die-phanomenologie-und-die-fundamente-der-wissenschaften.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-0686-</a>.
+        </li>
+        <li><span lang="de">Husserl, Edmund:
           <i class="booktitle">Logische Untersuchungen</i>. Mit einer Einführung und einem Sach- und Namenregister von Elisabeth Ströker. Meiner,</span> 2013. (LXXIII + 811 pages)
           <a href="https://meiner.de/logische-untersuchungen-9430.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-1944-2</a>.
           <!--@@17.05.2021: Sonderangebot-->
