Add: Husserl: Ideen zu einer reinen Phänomenologie und phänomenologischen Philosophie

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1923,6 +1923,11 @@
           <i class="booktitle">Philosophie als strenge Wissenschaft</i>. Mit einer Einleitung und Anmerkungen herausgegeben von Eduard Marbach. Meiner,</span> 2009. (XLVIII + 87 pages)
           <a href="https://meiner.de/philosophie-als-strenge-wissenschaft-9411.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-1926-8</a>.
         </li>
+        <li><span lang="de">Husserl, Edmund:
+          <i class="booktitle">Ideen zu einer reinen Phänomenologie und phänomenologischen Philosophie</i>. Herausgegeben von Elisabeth Ströker. Meiner,</span> 2009. (XXXVIII + 424 pages)
+          <a href="https://meiner.de/ideen-zu-einer-reinen-phanomenologie-und-phanomenologischen-philosophie.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-1919-0</a>.
+        </li>
+        <!--@@other Husserl books at https://meiner.de/autoren/edmund-husserl-a01 -->
       </ul>
 
       <h3 lang="fr">Gaston Bachelard (1884 – 1962)</h3>
