Add Verena Mayer's books on Husserl

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1928,6 +1928,14 @@
           <a href="https://meiner.de/ideen-zu-einer-reinen-phanomenologie-und-phanomenologischen-philosophie.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-1919-0</a>.
         </li>
         <!--@@other Husserl books at https://meiner.de/autoren/edmund-husserl-a01 -->
+        <li><span lang="de">Meyer, Verena:
+          <i class="booktitle">Edmund Husserl</i>. C. H. Beck,</span> 2009. (192 pages)
+          <a href="https://www.chbeck.de/mayer-edmund-husserl/product/26394" hreflang="de"><abbr>ISBN</abbr> 978-3-406-58688-0</a>.
+        </li>
+        <li><span lang="de">Meyer, Verena:
+          <i class="booktitle">Edmund Husserl: Logische Untersuchungen</i>. Klassiker Auslegen. Akademie Verlag,</span> 2008.
+          <a href="https://www.degruyter.com/document/doi/10.1524/9783050050133/html" hreflang="de"><abbr>ISBN</abbr> 9783050043913</a>.
+        </li>
       </ul>
 
       <h3 lang="fr">Gaston Bachelard (1884 – 1962)</h3>
