Add: Zum 150. Geburtstag von Edmund Husserl

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1936,6 +1936,13 @@
           <i class="booktitle">Edmund Husserl: Logische Untersuchungen</i>. Klassiker Auslegen. Akademie Verlag,</span> 2008.
           <a href="https://www.degruyter.com/document/doi/10.1524/9783050050133/html" hreflang="de"><abbr>ISBN</abbr> 9783050043913</a>.
         </li>
+        <li><span lang="de">
+          <a href="https://www.deutschlandfunk.de/zum-150-geburtstag-von-edmund-husserl.700.de.html?dram:article_id=84021" hreflang="de">Zum 150. Geburtstag von Edmund Husserl</a>,
+          <i class="website">Deutschlandfunk</i>,</span> 02.04.2009.
+          <!--@@Verena Mayer, Edmund Husserl, beck'sche reihe denker, München 2009, 192 S., 12,95 EUR.
+            Verena Mayer (Hrsg.), Edmund Husserl: Logische Untersuchungen, Akademie Verlag, Klassiker Auslegen, Berlin 2008, 250 S., 19,80 EUR.
+          -->
+        </li>
       </ul>
 
       <h3 lang="fr">Gaston Bachelard (1884 – 1962)</h3>
