Add: Horsten: De pater en de filosoof

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1943,6 +1943,13 @@
             Verena Mayer (Hrsg.), Edmund Husserl: Logische Untersuchungen, Akademie Verlag, Klassiker Auslegen, Berlin 2008, 250 S., 19,80 EUR.
           -->
         </li>
+        <li><span lang="nl">Horsten, Toon:
+          <i class="booktitle">De pater en de filosoof</i>. Uitgeverij Vrijdag,</span> 2018, 2021.
+          <a href="https://www.uitgeverijvrijdag.be/product/1360361/de-pater-en-de-filosoof" hreflang="nl"><abbr>ISBN</abbr> 9789460016516</a>.
+          <br /><span lang="nl">Prijs voor het Spirituele Boek 2018</span>. See also
+          <a href="https://www.flandersliterature.be/books-and-authors/book/the-father-and-the-philosopher-saving-the-husserl-archives">The Father and the Philosopher. Saving the Husserl archives</a>
+          (<i class="website">Flanders Literature</i>).
+        </li>
       </ul>
 
       <h3 lang="fr">Gaston Bachelard (1884 – 1962)</h3>
