Add: De pater en de filosoof (Klara, JHSG)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1950,6 +1950,14 @@
           <a href="https://www.flandersliterature.be/books-and-authors/book/the-father-and-the-philosopher-saving-the-husserl-archives">The Father and the Philosopher. Saving the Husserl archives</a>
           (<i class="website">Flanders Literature</i>).
         </li>
+        <li><span lang="nl">
+          <a href="https://klara.be/toon-horsten-over-de-pater-en-de-filosoof-2" hreflang="nl">Toon Horsten over De pater en de filosoof</a>,
+          <i class="website">Klara</i>,</span> 22.06.2018.
+        </li>
+        <li><span lang="nl">Smilde, Koen:
+          <a href="https://www.jhsg.nl/recensie-toon-horsten-pater-en-filosoof/" hreflang="nl">Recensie: Toon Horsten – De pater en de filosoof</a>,
+          <i class="website">Jonge Historici</i>,</span> 25.06.2018.
+        </li>
       </ul>
 
       <h3 lang="fr">Gaston Bachelard (1884 – 1962)</h3>
