Add: Husserl: Phänomenologische Psychologie

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1927,6 +1927,10 @@
           <i class="booktitle">Ideen zu einer reinen Phänomenologie und phänomenologischen Philosophie</i>. Herausgegeben von Elisabeth Ströker. Meiner,</span> 2009. (XXXVIII + 424 pages)
           <a href="https://meiner.de/ideen-zu-einer-reinen-phanomenologie-und-phanomenologischen-philosophie.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-1919-0</a>.
         </li>
+        <li><span lang="de">Husserl, Edmund:
+          <i class="booktitle">Phänomenologische Psychologie</i>. Herausgegeben von Dieter Lohmar. Meiner,</span> 2003. (XLII + 244 pages)
+          <a href="https://meiner.de/phanomenologische-psychologie.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-1603-8</a>.
+        </li>
         <!--@@other Husserl books at https://meiner.de/autoren/edmund-husserl-a01 -->
         <li><span lang="de">Meyer, Verena:
           <i class="booktitle">Edmund Husserl</i>. C. H. Beck,</span> 2009. (192 pages)
