Fix syntax error

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -62,7 +62,7 @@
         <!--<q cite="http://www.clarkefoundation.org/about-sir-arthur/sir-arthurs-quotations/">The greatest tragedy in mankind’s entire history may be the hijacking of morality by religion.</q>-->
         <cite>Arthur C. Clarke (<a href="http://www.clarkefoundation.org/about-sir-arthur/sir-arthurs-quotations/">Arthur C. Clarke Foundation: Sir Arthur’s Quotations</a>) </cite>
       </p>
-    </blockquote
+    </blockquote>
 
     <h2>Introductions to Ethics</h2>
     <ul>
