Add: Irwin: Classical Thought

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -107,7 +107,7 @@
       The following books cover many of these methods and tools.
     </p>
     <ul>
-      <li lang="de">Pfister, Jonas: 
+      <li lang="de">Pfister, Jonas:
         <i class="booktitle">Werkzeuge des Philosophierens</i>. Stuttgart: Reclam, 2013.
         <a href="http://www.reclam.de/detail/978-3-15-019138-5/Pfister__Jonas/Werkzeuge_des_Philosophierens"><abbr>ISBN</abbr> 978-3-15-019138-5</a>.
         <span lang="en-GB">An excellent introduction. Each chapter has exercises with solutions.
@@ -352,8 +352,7 @@
     <p>Books:</p>
     <ul>
       <li>Grayling, A. C.:
-        <i class="booktitle">The History of Philosophy</i>.
-        Penguin, 2020. (720 pages)
+        <i class="booktitle">The History of Philosophy</i>. Penguin, 2020. (720 pages)
         <a href="https://www.penguin.co.uk/books/305362/the-history-of-philosophy/9780241304549.html"><abbr>ISBN</abbr> 9780241304549</a>.
       </li>
       <li><span lang="de">
@@ -364,6 +363,10 @@
         other philosophers, notably <span lang="de">Hegel</span>, <span lang="de">Nietzsche</span> are treated in more detail.
         Philosophers from outside the German-speaking world include <span lang="fr">Comte</span>, Kierkegaard,
         Spencer, Mill, <span lang="fr">Taine</span>, C. S. Peirce and William James.
+      </li>
+      <li>Irwin, Terence:
+        <i class="booktitle">Classical Thought</i>. History of Western Philosophy. Oxford University Press, 1989. (288 pages)
+        <a href="https://global.oup.com/academic/product/classical-thought-9780192891778"><abbr>ISBN</abbr> 9780192891778</a>.
       </li>
       <li>Dasgupta, Surendranath:
         <a href="https://archive.org/details/indianphilosophy01dasguoft"><i class="booktitle">A History of Indian Philosophy: Volume I</i></a> (1957),
