Add: Sinclair: What Is Philosophy?

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -411,6 +411,13 @@
 
     <h2>Other Resources on How to Become a Philosopher</h2>
     <ul>
+      <li>Sinclair, Alistair J.:
+        <i class="booktitle">What Is Philosophy? An Introduction</i>. Edinburgh: Dunedin Academic Press, 2008. (Out of print.)
+        <abbr>ISBN</abbr> 978-1-903765-94-4.
+        <br />This introductory book consists of three parts. The first part (roughly 100 pages) gives an overview of the history of philosophy from Antiquity to the 20th century.
+        The second part (roughly fifteen pages) briefly introduces philosophical subjects (metaphysics, epistemology, etcetera) and twentieth-century philosophical movements.
+        The third part introduces a selection of philosophical problems (knowledge, causation, free will, time, truth and a few others).
+      </li>
       <li>
         <a href="http://www.researchmasterinphilosophy.be/home/programme/">InterUniversity Research Master in Philosophy</a>:
         a degree offered by the <span lang="nl">Universiteit Gent</span>, the <span lang="nl">Universiteit Antwerpen</span> and the <span lang="nl">Vrije Universiteit Brussel</span>.
