Add: Luscombe: Medieval Thought

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -368,6 +368,13 @@
         <i class="booktitle">Classical Thought</i>. History of Western Philosophy. Oxford University Press, 1989. (288 pages)
         <a href="https://global.oup.com/academic/product/classical-thought-9780192891778"><abbr>ISBN</abbr> 9780192891778</a>.
       </li>
+      <li>Luscombe, David:
+        <i class="booktitle">Medieval Thought</i>. History of Western Philosophy. Oxford University Press, 1997. (256 pages)
+        <a href="https://global.oup.com/academic/product/medieval-thought-9780192891792"><abbr>ISBN</abbr> 9780192891792</a>.
+        <br />From the publisher's book description:
+        <q>(&hellip;) Medieval philosophy is widely regarded as having a theological and religious orientation, but more recently attention has been given to the early study of logic, language, and the philosophy of science.
+        This history therefore gives a fascinating insight into medieval views on aspects such as astronomy, materialism, perception, and the nature of the soul.</q>
+      </li>
       <li>Dasgupta, Surendranath:
         <a href="https://archive.org/details/indianphilosophy01dasguoft"><i class="booktitle">A History of Indian Philosophy: Volume I</i></a> (1957),
         <a href="https://archive.org/details/indianphilosophy02dasguoft"><i class="booktitle">A History of Indian Philosophy: Volume II</i></a> (1952),
