--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -375,6 +375,15 @@
         <q>(&hellip;) Medieval philosophy is widely regarded as having a theological and religious orientation, but more recently attention has been given to the early study of logic, language, and the philosophy of science.
         This history therefore gives a fascinating insight into medieval views on aspects such as astronomy, materialism, perception, and the nature of the soul.</q>
       </li>
+      <li>Copenhaver, Brian P.; Schmitt, Charles B.:
+        <i class="booktitle">Renaissance Philosophy</i>. History of Western Philosophy. Oxford University Press, 1992. (464 pages)
+        <a href="https://global.oup.com/academic/product/renaissance-philosophy-9780192891846"><abbr>ISBN</abbr> 9780192891846</a>.
+        <br />From the publisher's book description:
+        <q>(&hellip;) This volume introduces the reader to the philosophy written, read, taught, and debated during the period traditionally credited with the `revival of learning'.<br />
+        The authors examine the relation of Renaissance philosophy to humanism and the universities, the impact of rediscovered ancient sources, the recovery of Plato and the Neoplatonists, and the evolving ascendancy of Aristotle.
+        <i class="booktitle">Renaissance Philosophy</i> also explores the original contributions of major figures including Bruni, Valla, Ficino, Pico della Mirandola, Pomponazzi, Machiavelli, More, Vitoria, Montaigne, Bruno, and Campanella.
+        (&hellip;)</q>
+      </li>
       <li>Dasgupta, Surendranath:
         <a href="https://archive.org/details/indianphilosophy01dasguoft"><i class="booktitle">A History of Indian Philosophy: Volume I</i></a> (1957),
         <a href="https://archive.org/details/indianphilosophy02dasguoft"><i class="booktitle">A History of Indian Philosophy: Volume II</i></a> (1952),
