Add books by John Brockman: This Idea Must Die, What Have You Changed Your Mind About

--- a/science/index.html
+++ b/science/index.html
@@ -202,6 +202,14 @@
           For a list of scientists interviewed by Angier, see the
           <a href="https://en.wikipedia.org/wiki/The_Canon">Wikipedia article about the book</a>.
         </li>
+        <li>Brockman, John:
+          <i class="booktitle">This Idea Must Die: Scientific Theories That Are Blocking Progress</i>. HarperCollins, 2015. (592 pages)
+          <a href="https://harpercollins.co.uk/products/this-idea-must-die-scientific-theories-that-are-blocking-progress-edge-question-series-john-brockman?variant=32638321131598"><abbr>ISBN</abbr> 9780062374349</a>.
+        </li>
+        <li>Brockman, John:
+          <i class="booktitle">What Have You Changed Your Mind About?: Today's Leading Minds Rethink Everything</i>. HarperCollins, 2016. (416 pages)
+          <a href="https://harpercollins.co.uk/products/what-have-you-changed-your-mind-about-todays-leading-minds-rethink-everything-edge-question-series-john-brockman?variant=39339338989646"><abbr>ISBN</abbr> 9780061686542</a>.
+        </li>
         <li>Zimring, James C.:
           <i class="booktitle">What Science Is and How It Really Works</i>.
           Cambridge University Press, 2019. (402 pages)
