Add: Midgley: What Is Philosophy?

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -434,6 +434,15 @@
         The second part (roughly fifteen pages) briefly introduces philosophical subjects (metaphysics, epistemology, etcetera) and twentieth-century philosophical movements.
         The third part introduces a selection of philosophical problems (knowledge, causation, free will, time, truth and a few others).
       </li>
+      <li>Midgley, Mary:
+        <i class="booktitle">What Is Philosophy for?</i>. Bloomsbury, 2018. (232 pages)
+        <a href="https://www.bloomsbury.com/uk/what-is-philosophy-for-9781350051072/"><abbr>ISBN</abbr> 9781350051072</a>.
+        <br />From the publisher's book description:
+        <q>Why should anybody take an interest in philosophy? Is it just another detailed study like metallurgy? Or is it similar to history, literature and even religion: a study meant to do some personal good and influence our lives?<br />
+        In her last published work, Mary Midgley addresses provocative questions, interrogating the various forms of our current intellectual anxieties and confusions and how we might deal with them. In doing so, she provides a robust, yet not uncritical, defence of philosophy and the life of the mind.<br />
+        This defence is expertly placed in the context of contemporary debates about science, religion, and philosophy. It asks whether, in light of rampant scientific and technological developments, we still need philosophy to help us think about the big questions of meaning, knowledge, and value.
+        </q>
+      </li>
       <li>
         <a href="http://www.researchmasterinphilosophy.be/home/programme/">InterUniversity Research Master in Philosophy</a>:
         a degree offered by the <span lang="nl">Universiteit Gent</span>, the <span lang="nl">Universiteit Antwerpen</span> and the <span lang="nl">Vrije Universiteit Brussel</span>.
