Add: Aristotle: Meteorology

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1504,6 +1504,10 @@
 
       <h3>Aristotle (384 – 322 <abbr>BC</abbr>)</h3>
       <ul>
+        <li>Aristotle:
+          <a href="http://classics.mit.edu/Aristotle/meteorology.1.i.html">Metereology</a>, translated by E. W. Webster,
+          <i class="website">The Internet Classics Archive</i>, 350 <abbr>B.C.E.</abbr> (accessed on 01.06.2021).
+        </li>
         <li>Shields, Christopher:
           <a href="https://plato.stanford.edu/entries/aristotle/">Aristotle</a>,
           <i class="website">Stanford Encyclopedia of Philosophy</i>, 25.09.2008, revised on 25.08.2020.
