Add: Midgley: Can't We Make Moral Judgements?

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -443,6 +443,10 @@
         This defence is expertly placed in the context of contemporary debates about science, religion, and philosophy. It asks whether, in light of rampant scientific and technological developments, we still need philosophy to help us think about the big questions of meaning, knowledge, and value.
         </q>
       </li>
+      <li>Midgley, Mary:
+        <i class="booktitle">Can't We Make Moral Judgements?</i>. Bloomsbury, 2017. (184 pages)
+        <a href="https://www.bloomsbury.com/uk/cant-we-make-moral-judgements-9781474298001/"><abbr>ISBN</abbr> 9781474298001</a>.
+      </li>
       <li>
         <a href="http://www.researchmasterinphilosophy.be/home/programme/">InterUniversity Research Master in Philosophy</a>:
         a degree offered by the <span lang="nl">Universiteit Gent</span>, the <span lang="nl">Universiteit Antwerpen</span> and the <span lang="nl">Vrije Universiteit Brussel</span>.
