Add: Cohon: Hume's Moral Philosophy; Schwartz: Hume's Guillotine

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1767,6 +1767,14 @@
           <i class="booktitle">The Infidel and the Professor: David Hume, Adam Smith, and the Friendship That Shaped Modern Thought</i>. Princeton University Press, 2017. (336 pages)
           <a href="https://press.princeton.edu/titles/11092.html"><abbr>ISBN</abbr> 9780691177014</a>.
         </li>
+        <li>Cohon, Rachel:
+          <a href="https://plato.stanford.edu/entries/hume-moral/">Hume’s Moral Philosophy</a>,
+          <i class="website">Stanford Encyclopedia of Philosophy</i>, 29.10.2004; updated on 20.08.2018.
+        </li>
+        <li>Schwartz, Pedro:
+          <a href="https://www.adamsmithworks.org/documents/hume-s-guillotine">Hume’s Guillotine</a>,
+          <i class="website">Adam Smith Works</i>, 05.02.2020.
+        </li>
       </ul>
       <!--Daniel Dennett: "Hume's Strange Inversion of Reasoning", Moscow State University in June 2012: https://www.youtube.com/watch?v=wY9Xm5xgiEE (not mainly focused on Hume, actually) See also https://www.youtube.com/watch?v=cesVHCzw22E -->
 
