Add: Schröder: Atheismus. Fünf Einwände und eine Frage

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -320,7 +320,7 @@
           <i class="booktitle">The Meaning and End of Religion</i>. [1962] Fortress Press, 1990. (352 pages)
           <a href="http://fortresspress.com/product/meaning-and-end-religion"><abbr>ISBN</abbr> 9780800624750</a>.
           <br />Publisher's description:
-          <quote>Wilfred Cantwell Smith, maintained in this vastly important work that Westerners have misperceived religious life by making "religion" into one thing. He shows the inadequacy of "religion" to capture the living, endlessly variable ways and traditions in which religious faith presents itself in the world.</quote>
+          <q>Wilfred Cantwell Smith, maintained in this vastly important work that Westerners have misperceived religious life by making "religion" into one thing. He shows the inadequacy of "religion" to capture the living, endlessly variable ways and traditions in which religious faith presents itself in the world.</q>
         </li>
         <li>Nongbri, Brent: <i class="booktitle">Before Religion: A History of a Modern Concept</i>. Yale University Press, 2015. (288 pages)
           <a href="https://yalebooks.yale.edu/book/9780300216783/religion"><abbr>ISBN</abbr> 9780300216783</a>.
@@ -572,7 +572,7 @@
           <i class="booktitle" lang="de">Der Atheismus und seine Geschichte im Abendlande</i> (four volumes, 1920–1923).
         </li>
         <li><span lang="de">Spiekermann, Björn:
-          <i class="booktitle" hreflang="de">Der Gottlose. Geschichte eines Feindbilds in der Frühen Neuzeit</i>. 2., durchgesehene Auflage. Vittorio Klostermann,</span> 2021. (XVI + 772 pages)
+          <i class="booktitle" lang="de">Der Gottlose. Geschichte eines Feindbilds in der Frühen Neuzeit</i>. 2., durchgesehene Auflage. Vittorio Klostermann,</span> 2021. (XVI + 772 pages)
           <a href="https://www.klostermann.de/epages/63574303.sf/de_DE/?ObjectPath=/Shops/63574303/Products/9783465045571"><abbr>ISBN</abbr> 978-3-465-04557-1</a>.
           <br />From the publisher's book description:
           <q lang="de">Schon lange, bevor es Atheisten im heutigen Wortsinn gab, wurde über den Unglauben oder die Gottlosigkeit geschrieben und vor den angeblich damit verbundenen Gefahren gewarnt.
@@ -617,6 +617,10 @@
           <i class="booktitle">Traktat über die drei Betrüger</i>. Herausgegeben von Winfried Schröder. Meiner</span>, 1994. (LII + 168 pages)
           <a href="https://meiner.de/traktat-uber-die-drei-betruger.html"><abbr>ISBN</abbr> 978-3-7873-1174-3</a>.
           <br />This is a translation of <i class="booktitle" lang="fr">Traité des trois imposteurs</i>, which was published during the French Enlightenment.
+        </li>
+        <li><span lang="de">Schröder, Winfried:
+          <i class="booktitle">Atheismus. Fünf Einwände und eine Frage</i>. Blaue Reihe. Meiner,</span> 2021. (144 pages)
+          <a href="https://meiner.de/atheismus.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-3957-0</a>.
         </li>
       </ul>
     </section>
@@ -1099,7 +1103,7 @@
         <li>Sengupta, Shuddhabrata:
           <a href="https://thewire.in/government/kumbh-2021-astrology-mortality-and-the-indifference-to-life-of-leaders-and-stars">Kumbh 2021: Astrology, Mortality and the Indifference to Life of Leaders and Stars</a>,
           <i class="website">The Wire (India)</i>, 20.04.2021.
-          <br /><a href"https://twitter.com/RichardDawkins/status/1388911082903719938">Richard Dawkins tweeted this article on 02.05.2021</a>
+          <br /><a href="https://twitter.com/RichardDawkins/status/1388911082903719938">Richard Dawkins tweeted this article on 02.05.2021</a>
           saying,
           <q cite="https://twitter.com/RichardDawkins/status/1388911082903719938">Astrology believers in millions-strong superspreader event. Sun entering Aries & Jupiter in Aquarius so it had to be 2021.<br />
           “Death is inevitable, but we must maintain our traditions.” “With Goddess Ganga’s blessings, faith will triumph over disease.”</q>
@@ -1156,6 +1160,10 @@
         <li>:
           <i class="booktitle"></i>.
           <a href=""><abbr>ISBN</abbr> </a>.
+        </li>
+        <li><span lang="de">:
+          <i class="booktitle"></i>.</span>
+          <a href="" hreflang="de"><abbr>ISBN</abbr> </a>.
         </li>
         <li>
           <a href=""></a>
