Add: Himma: Anselm; Natural Theology: Anselm and Aquinas

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -422,6 +422,14 @@
           <a href="https://infidels.org/library/modern/steven_conifer/ar.html">The Argument from Reason for the Nonexistence of God</a>,
           <i class="website">The Secular Web</i>, 2001.
         </li>
+        <li>Himma, Kenneth Einar:
+          <a href="https://iep.utm.edu/ont-arg/">Anselm: Ontological Argument for God’s Existence</a>,
+          <i class="website">Internet Encyclopedia of Philosophy</i> (no date; accessed on 10.05.2021).
+        </li>
+        <li>
+          <a href="https://godandgoodlife.nd.edu/digital-essays/natural-theology-aquinas-and-anselm/">Natural Theology: Anselm and Aquinas</a>,
+          <i class="website">God and the Good Life, University of Notre Dame</i> (no date; accessed on 10.05.2021).
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=QBPYuFhDy7g">How An Ordinary Christian Can Silence An Atheist | William Lane Craig</a>
           (Off the Kirb Ministries, 4 minutes, 26.01.2019).
