Add Philosophy Index

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2921,6 +2921,12 @@
         <li>Wikipedia:
           <a href="https://en.wikipedia.org/wiki/List_of_important_publications_in_philosophy">List of important publications in philosophy</a>.
         </li>
+        <li>
+          <a href="http://www.philosophy-index.com/">Philosophy Index</a>.
+          <br />Site description:
+          <q>Philosophy Index is a site devoted to the study of philosophy and the philosophers who conduct it. The site contains a number of philosophy texts, brief biographies and introductions to philosophers and explanations on a number of topics.
+          Accredited homeschool programs online at Northgate Academy. (&hellip;)</q> (Accessed on 07.06.2021.)
+        </li>
         <li>Unger, Peter:
           <i class="booktitle">Empty Ideas: A Critique of Analytic Philosophy</i>. Oxford University Press, 2014. (272 pages)
           <a href="https://global.oup.com/academic/product/empty-ideas-9780199330812"><abbr>ISBN</abbr> 9780199330812</a>.
