Add: Reik: Dogma und Zwangsidee

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -970,6 +970,10 @@
         <li>
           <a href="https://www.learnreligions.com/">Learn Religions - Guide to the Beliefs and Religions of the World</a>.
         </li>
+        <li><span lang="de">Reik, Theodor:
+          <a href="https://archive.org/details/Reik_1927_Dogma_und_Zwangsidee_k"><i class="booktitle">Dogma und Zwangsidee. Eine psychoanalytische Studie zur Entwicklung der Religion</i>.</a>.
+           Internationaler Psychoanalytischer Verlag</span>, 1927. Scanned version available on Archive.org.
+        </li>
 
         <!--Aalst carnaval:-->
         <li><span lang="nl">
