add h2: New Atheism

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -1075,6 +1075,25 @@
     </section>
 
     <section>
+      <h2>New Atheism</h2>
+      <ul>
+        <li>
+          <a href="https://www.youtube.com/watch?v=WpKmje75kZo">We'd be better off without religion: Christopher Hitchens</a>
+          (<i class="ytchannel">Intelligence Squared</i> on YouTube, 14 minutes, 16.12.2011).
+          <br />Description below the video:
+          <q>In this speech from our 2007 debate, 'We'd be better off without religion', the late Christopher Hitchens argues
+          that religion has been at the root of many of the conflicts that have shaped the 20th-21st century world.
+          <br />He cites the current situations in the Balkans, the Middle East, and Northern Ireland as examples, noting that in these places,
+          it has been intra-faith disputes that have caused or aggravated the conflicts and slowed political and social progress.</q>
+        </li>
+        <li>McAnulla, Stuart; Kettell, Steven; Schulzke, Marcus (editors):
+          <i class="booktitle">The Politics of New Atheism</i>. Routledge, 2020. (172 pages)
+          <a href="https://www.routledge.com/The-Politics-of-New-Atheism/McAnulla-Kettell-Schulzke/p/book/9780367471705"><abbr>ISBN</abbr> 9780367471705</a>.
+        </li>
+      </ul>
+    </section>
+
+    <section>
       <h2>Examples of Outdated Beliefs</h2>
       <ul>
         <li>Glatz, Carol:
