--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -1076,7 +1076,16 @@
 
     <section>
       <h2>New Atheism</h2>
+      <p><a href="https://en.wikipedia.org/wiki/New_Atheism">New Atheism</a> refers to
+        the writings and positions of a number of early 21st-century atheists.
+        In the English-speaking world, these atheists include Christopher Hitchens, Richard Dawkins,
+        Daniel Dennett, Sam Harris, Victor Stenger, Peter Boghossian and A. C. Grayling.
+      </p>
       <ul>
+        <li>Stenger, Victor J.:
+          <i class="booktitle">The New Atheism: Taking a Stand for Science and Reason</i>. Prometheus Boosk, 2009.
+          <a href="http://www.prometheusbooks.com/books/9781591027515"><abbr>ISBN</abbr> 9781591027515</a>.
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=WpKmje75kZo">We'd be better off without religion: Christopher Hitchens</a>
           (<i class="ytchannel">Intelligence Squared</i> on YouTube, 14 minutes, 16.12.2011).
