--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -191,6 +191,14 @@
           <i class="booktitle">The Cambridge Companion to Hegel and Nineteenth-Century Philosophy</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2009. (448 pages)
           <a href="http://www.cambridge.org/de/academic/subjects/philosophy/nineteenth-century-philosophy/cambridge-companion-hegel-and-nineteenth-century-philosophy?format=PB&amp;isbn=9780521539388"><abbr>ISBN</abbr> 9780521539388</a>.
         </li>
+        <li>Moyar, Dean:
+          <i class="booktitle">The Oxford Handbook of Hegel</i>. Oxford Handbooks. Oxford University Press, 2017. (880 pages)
+          <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-hegel-9780199355228"><abbr>ISBN</abbr> 9780199355228</a>.
+        </li>
+        <li>Patten, Alan:
+          <i class="booktitle">Hegel's Idea of Freedom</i>. Oxford Philosophical Monographs. Oxford University Press, 2002. (230 pages)
+          <a href="https://global.oup.com/academic/product/hegels-idea-of-freedom-9780199251568"><abbr>ISBN</abbr> 9780199251568</a>.
+        </li>
         <li>Houlgate, Stephen:
           <a href="https://fivebooks.com/best-books/hegel-stephen-houlgate/">The best books on Hegel</a>,
           <i class="website">Five Books</i>, March 2018. Houlgate's recommendations are
