Add: Matthews: If you love research, academia may not be for you

--- a/science/doctoral-research.html
+++ b/science/doctoral-research.html
@@ -113,12 +113,6 @@
         Self-published <a href="https://www.amazon.com/How-Research-Todays-Tips-Tools-ebook/dp/B01I5JJDXC">e-book for Amazon Kindle</a>.
         Part H of the book covers writing.
       </li>
-      <!-- 
-      <li>
-        <i class="booktitle"></i>.
-        <a href=""><abbr></abbr></a>.
-      </li>
-      -->
     </ul>
 
     <h2>Finding Dissertations Online</h2>
@@ -227,13 +221,19 @@
         <a href="https://interdisciplinoxy.com/">Interdisciplinoxy.com</a>: vacancies in higher education.
         (It is not clear where the company behinds this site is located.)
       </li>
+      <li>Matthews, David:
+        <a href="https://www.timeshighereducation.com/blog/if-you-love-research-academia-may-not-be-you">If you love research, academia may not be for you</a>,
+        <i class="website">Times Higher Education</i>, 08.11.2018.
+        <br />A study in the Netherlands found that full professors spend just 17 percent of their time on their own research.
+        It also found that,
+        <q>On average, full professors work 45 per cent longer than their contracted hours – assuming a 38-hour contract, as the report does, that means a 55-hour working week, or an 11-hour working day.</q>
+      </li>
     </ul>
-    <!-- RG discussions on review articles:
+    <!--ResearchGate discussions on review articles:
       * "How to write a review article? "(2013): https://www.researchgate.net/post/How_to_write_a_review_article2
       * "'Review Article' is an overview of the pre-existing data. What are the major precautions to be considered for the perfection of a 'Review article'? "
         (2013): https://www.researchgate.net/post/Review_Article_is_an_overview_of_the_pre-existing_data_What_are_the_major_precautions_to_be_considered_for_the_perfection_of_a_Review_article1
       * "What points should be taken care while writing a review article?" (2013): https://www.researchgate.net/post/What_points_should_be_taken_care_while_writing_a_review_article2 (not much there)
-      * "" ():
       * "Differentiate between Research Article and Review Article?" (2015): https://www.researchgate.net/post/Differentiate_between_Research_Article_and_Review_Article (@@see attached example of review article)
       * "What are the most important elements to consider in writing a review article?" (2016): https://www.researchgate.net/post/What_are_the_most_important_elements_to_consider_in_writing_a_review_article (@@see attached guidelines for review articles)
       * "What is the importance of publishing a review article?" (2016): https://www.researchgate.net/post/What_is_the_importance_of_publishing_a_review_article (@@see links)
@@ -250,6 +250,10 @@
         </li>
         <li>
           <a href=""></a>
+        </li>
+        <li>
+          <i class="booktitle"></i>.
+          <a href=""><abbr></abbr></a>.
         </li>
       </ul>
     </section>
