Nicholas Christakis — How We’re Wired for Goodness

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -282,6 +282,10 @@
         Schroeder, Timothy: <a href="https://ndpr.nd.edu/news/ethics-without-morals-in-defence-of-amorality/">Ethics Without Morals: In Defence of Amorality</a>
         (<i class="website">Notre Dame Philosophical Reviews</i>, 16.12.2012.
       </li>
+      <li>
+        <a href="https://onbeing.org/programs/nicholas-christakis-how-were-wired-for-goodness/">Nicholas Christakis — How We’re Wired for Goodness</a>,
+        <i class="website">The On Being Project</i>, 10.06.2021 (accessed on 11.06.2021).
+      </li>
       <li>Wilson, James:
         <a href="https://aeon.co/essays/what-is-the-problem-with-ethical-trolley-problems">The trolley problem problem</a>,
         <i class="website">Aeon</i>, 28.05.2020.
