Add: Blunden: Hegel for Social Movements

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -199,6 +199,10 @@
           <i class="booktitle">Hegel's Idea of Freedom</i>. Oxford Philosophical Monographs. Oxford University Press, 2002. (230 pages)
           <a href="https://global.oup.com/academic/product/hegels-idea-of-freedom-9780199251568"><abbr>ISBN</abbr> 9780199251568</a>.
         </li>
+        <li>Blunden, Andy:
+          <i class="booktitle">Hegel for Social Movements</i>. Haymarket Books, 2020. (290 pages)
+          <a href="https://www.haymarketbooks.org/books/1484-hegel-for-social-movements"><abbr>ISBN</abbr> 9781642591927</a>.
+        </li>
         <li>Houlgate, Stephen:
           <a href="https://fivebooks.com/best-books/hegel-stephen-houlgate/">The best books on Hegel</a>,
           <i class="website">Five Books</i>, March 2018. Houlgate's recommendations are
