Add: Fuchs and Mosco: Marx in the Age of Digital Capitalism

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -241,6 +241,10 @@
           <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-053-6.htm" hreflang="de"><abbr>ISBN</abbr> 3-89657-053-6</a>.
           <br />The second of two volumems.
         </li>
+        <li>Fuchs, Christian; Mosco, Vincent (editors):
+          <i class="booktitle">Marx in the Age of Digital Capitalism</i>. Haymarket Books, 2017. (549 pages)
+          <a href="https://www.haymarketbooks.org/books/1034-marx-in-the-age-of-digital-capitalism"><abbr>ISBN</abbr> 9781608467099</a>.
+        </li>
         <li>Davis, Mike:
           <i class="booktitle">Old Gods, New Enigmas: Marx’s Lost Theory</i>. Verso, 2018 (320 pages)
           <a href="https://www.versobooks.com/books/2779-old-gods-new-enigmas"><abbr>ISBN</abbr> 9781788732161</a>.
