Add: Oxford Handbook of Ancient Greek Religion

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -412,6 +412,10 @@
           <br />From the publisher's book description:
           <q>Through reference to plays, poetry, novels, films and painting, this manifesto traces the genealogy of ‘true religion' in the western world and makes six controversial claims about the past, present and future of religion. (&hellip;)</q>
         </li>
+        <li>Eidinow, Esther; Kindt, Julia (editors):
+          <i class="booktitle">The Oxford Handbook of Ancient Greek Religion</i>. Oxford Handbooks. Oxford University Press, 2017. (732 pages)
+          <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-ancient-greek-religion-9780198810179"><abbr>ISBN</abbr> 9780198810179</a>.
+        </li>
       </ul>
     </section>
 
