Add: Paolucci: Marx's Scientific Dialectics: A Methodological Treatise for a New Century

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -231,6 +231,10 @@
           <q>(&hellip;) As a genre, sf is ideally suited to critiquing the present through its explorations of the social and political possibilities of the future.
           This is the first collection to combine analyses of sf literature and films within a broader overview of Marxist theory and critical perspectives on the genre. (&hellip;)</q>
         </li>
+        <li>Paolucci, Paul:
+          <i class="booktitle">Marx's Scientific Dialectics: A Methodological Treatise for a New Century</i>. Haymarket Boosk, 2009. (332 pages)
+          <a href="https://www.haymarketbooks.org/books/297-marx-s-scientific-dialectics"><abbr>ISBN</abbr> 9781608460397</a>.
+        </li>
         <li><span lang="de">Heinrich, Michael:
           <i class="booktitle">Wie das Marxsche Kapital lesen? Band 1. Leseanleitung und Kommentar zum Anfang des «Kapital». Teil 1</i>. Schmetterling Verlag,</span> 2009 (second edition), 2016 (thir edition, 288 pages)
           <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-084-6.htm" hreflang="de"><abbr>ISBN</abbr> 3-89657-084-6</a>.
