Add: Oxford Handbook of Early Christian Apocrypha

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -416,6 +416,10 @@
           <i class="booktitle">The Oxford Handbook of Ancient Greek Religion</i>. Oxford Handbooks. Oxford University Press, 2017. (732 pages)
           <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-ancient-greek-religion-9780198810179"><abbr>ISBN</abbr> 9780198810179</a>.
         </li>
+        <li>Gregory, Andrew; Tuckett, Christopher; Verheyden, Joseph (editors):
+          <i class="booktitle">The Oxford Handbook of Early Christian Apocrypha</i>. Oxford Handbooks. Oxford University Press, 2018. (496 pages)
+          <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-early-christian-apocrypha-9780198801252"><abbr>ISBN</abbr> 9780198801252</a>.
+        </li>
       </ul>
     </section>
 
